# meta_codebench_cpp_tester

./: Readme.md  code_runner.sh  create_task.sh
tasks/621206/: Reamde.md  logs.txt  template_wrapper.h.in
tasks/621206/src/: base_code.cpp  correct_response.cpp  model1.cpp  model10.cpp  model2.cpp  model3.cpp  model4.cpp  model5.cpp  model6.cpp  model7.cpp  model8.cpp  model9.cpp
tasks/621206/tests/: test_model.cpp
tasks/621262/: CMakeLists.txt  logs.txt
tasks/621262/src/: A.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  base.cpp  ideal.cpp  incorrect.cpp
tasks/621262/tests/: test_model.cpp
